--- a/src/App.css
+++ b/src/App.css
@@ -37,12 +37,19 @@
   }
 }
 
+body{
+  overflow: hidden;
+}
+
 .gameContainer{
   width: 100vw;
   height: 100vh;
   overflow: hidden;
   background-color: #21D4FD;
-  background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
+  background-image: url('images/galaxy3.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 
   display: flex;
   flex-direction: column;
@@ -61,15 +68,15 @@
   flex-direction: row;
   justify-content: center;
   gap: 12vw;
-  background-color: #3ed4fe;
+  background: #9260FD;
   padding: 0.5vw;
   margin-bottom: 1.5vw;
   border-radius: 1vw;
   color: white;
-  font-family:'Courier New', Courier, monospace;
-  font-size: 1.8vw;
+  font-family: 'Play', sans-serif;
+  font-size: 2vw;
   font-weight: 600;
-  box-shadow: 0vw 0.5vw rgb(3, 98, 175);
+  box-shadow: 0vw 0.5vw #6235DA;
 }
 
 .gameGridContainer{
@@ -121,35 +128,125 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* background: rgba(0,0,0,1); */
-  background: #c0fc19;
-  background-image: 
-  linear-gradient(45deg, #b1fc26 25%, transparent 25%), 
-  linear-gradient(-45deg, #b1fc26 25%, transparent 25%), 
-  linear-gradient(45deg, transparent 75%, #b1fc26 75%), 
-  linear-gradient(-45deg, transparent 75%, #b1fc26 75%);
   background-size: 14vw 14vw;
   background-position: 0 0, 0 7vw, 7vw -6.95vw, -6.95vw 0vw;
-  /* background-size: 10vw 10vw;  */
   transition: 1s;
+  background-image: url('images/galaxy4.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  box-shadow: inset 0 0 8vw 0vw #000;
 }
 
 .instructions{
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 0.8vw;
-  color: rgb(140, 36, 175);
-  font-family:'Courier New', Courier, monospace;
   font-size: 1.4vw;
   font-weight: 550;
-  margin: 2vw;
-  width: 48vw;
-  height: 6vh;
-  line-height: 0;
-  background-color: rgb(213, 86, 255);
+  font-family: 'Play', sans-serif;
+}
+
+.description {
+  position: absolute;
+  margin: 0vw;
+  width: 47vw;
+  height: 9vw;
+  line-height: 1.5vw;
+  padding: 1vw;
+  color: rgb(255, 255, 255);
+  background-color: rgb(55, 0, 150);
   border-radius: 1vw;
-  box-shadow: 0vw 0.5vw  rgb(158, 50, 193);
+  box-shadow: 0vw 0.5vw  rgb(41, 0, 111);
+  opacity: 0;
+  transform: translateY(30%);
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.missionTitle{
+  font-size: 1.3vw;
+  line-height: 2.5vw;
+}
+
+.missionDescription{
+  font-size: 1.1vw;
+  text-align: justify;
+  text-align-last: center;
+}
+
+.instrContainer{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.planet{
+  width: 7vw;
+  height: 7vw;
+  background-image: url('images/planet.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+  color: rgb(130, 52, 0);
+  font-size: 2.2vw;
+  font-weight: 10vw;
+  line-height: 7vw;
+  transform: translateY(2vw) scale(100%) rotate(0deg);
+  transition: 0.5s;
+  z-index: 10;
+}
+
+.planet:hover{
+  transform: translateY(0.5vw) scale(120%) rotate(360deg);
+  filter: brightness(1.4);
+  transition: 0.5s;
+}
+ 
+.left-sentence {
+  opacity: 0;
+  transform: translateX(100%);
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+  margin: 0vw;
+  width: 20vw;
+  height: 6vh;
+  line-height: 6vh;
+  color: rgb(255, 255, 255);
+  background-color: rgb(55, 0, 150);
+  border-radius: 1vw 0vw 0vw 1vw;
+  box-shadow: 0vw 0.5vw  rgb(41, 0, 111);
+}
+
+.right-sentence {
+  opacity: 0;
+  transform: translateX(-100%);
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+  margin: 0vw;
+  width: 20vw;
+  height: 6vh;
+  line-height: 6vh;
+  color: rgb(255, 255, 255);
+  background-color: rgb(55, 0, 150);
+  border-radius: 0vw 1vw 1vw 0vw;
+  box-shadow: 0vw 0.5vw  rgb(41, 0, 111);
+}
+
+.instructions:hover  .left-sentence,
+.instructions:hover  .right-sentence {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.instructions:hover  .description {
+  opacity: 1;
+  transform: translateY(-85%);
+}
+
+.instructions:hover  .planet {
+  transform: translateY(0.5vw) scale(120%) rotate(360deg);
+  filter: brightness(1.4);
+  transition: 0.5s;
 }
 
 #gameOverTitle {
@@ -157,10 +254,19 @@
   z-index: 4;
   max-width: 100%;
   position: relative;
-  font-family:fantasy;
-  font-size: 12vw;
-  /* font-weight: 100; */
+  font-family: 'Bungee', cursive;
+  font-size: 7vw;
+  line-height: 12vw;
   color: white;
+  text-shadow: 0.1vw 0.1vw rgb(41, 0, 111),
+  0.2vw 0.2vw rgb(41, 0, 111),
+  0.3vw 0.3vw rgb(41, 0, 111),
+  0.4vw 0.4vw rgb(41, 0, 111),
+  0.5vw 0.5vw rgb(41, 0, 111),
+  0.6vw 0.6vw rgb(41, 0, 111),
+  0.7vw 0.7vw rgb(41, 0, 111),
+  0.8vw 0.8vw rgb(41, 0, 111),
+  0.9vw 0.9vw rgb(41, 0, 111);
 }
 
 .tryAgain {
@@ -169,15 +275,12 @@
   z-index: 4;
   width: 30vw;
   border-radius: 10px;
-  background: rgb(255, 95, 130);
-  color: rgb(193, 48, 79);
-  /* border-width: 0.2vw;
-  border-style: solid;
-  border-color: rgb(40, 123, 40); */
+  background: #ffa95e;
+  color: #ff4949;
   box-shadow: 0vw 0.7vw;
   padding: 1.5vw;
   font-size: 1.5vw;
-  font-family:'Courier New', Courier, monospace;
+  font-family: 'Play', sans-serif;
   font-weight: 700;
   transition: 0.2s;
 }
@@ -189,9 +292,3 @@
   transition: 0.2s;
 }
 
-.bombPic {
-  width: 100px;
-  height: 100px;
-  background-size: cover;
-  background-image: url("C:\Users\nicol\Documents\Projects\Programming - projects\minesweeper_react\minesweeper\src\images\bomb.png");
-}
